--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "keywords": ["microframework","worksena","mvc"],
     "license": "MIT",
     "type": "project",
-    "version": "0.0.1",
+    "version": "v1.0.0",
     "authors": [
         {
           "name": "Walderlan Sena",
