--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
     "name": "mvs/worksena",
     "description": "Micro Framework PHP",
-    "keywords": ["micro-framework","worksena","mvc", "framework-PHP"],
+    "keywords": ["micro-framework","worksena","mvc", "framework-php"],
     "license": "MIT",
     "type": "project",
-    "version": "v1.3.10",
+    "version": "v1.3.12",
     "authors": [
         {
           "name": "Walderlan Sena",
@@ -14,7 +14,7 @@
         }
     ],
     "require": {
-        "php":">=5.6.4"
+        "php":">=7.0"
     },
     "autoload": {
       "psr-4": {
