--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php":">=7.0",
-        "mvs/worksena-mvc": "*",
+        "mvs/worksena-mvc": ">=1.1.0",
         "mvs/worksena-router": "*"
     },
     "autoload": {
